--- a/site/developer/model-documentation/install-and-initialize-validmind-library.qmd
+++ b/site/developer/model-documentation/install-and-initialize-validmind-library.qmd
@@ -16,8 +16,8 @@ aliases:
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] You are the model owner.
-- [x] You are a [{{< fa code >}} Developer]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1]
+- [x] You are the model owner.[^1]
+- [x] You are a [{{< fa code >}} Developer]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
 
 In order to integrate the {{< var vm.developer >}} and to be able to upload to the {{< var vm.platform >}}, you must provide the following information through a code snippet that you copy from the {{< var validmind.platform >}}:
 
@@ -28,7 +28,7 @@ In order to integrate the {{< var vm.developer >}} and to be able to upload to t
 | `api_secret`  | The account secret key             |
 | `model`     | The model identifier             |
 
-If you do not have a suitable model with a code snippet to use, you can register a model first.[^2] 
+If you do not have a suitable model with a code snippet to use, you can register a model first.[^3] 
 
 The {{< var vm.developer >}} also requires access to the data sources where data sets used for training, testing, and trained model files are stored. This access is needed to run model documentation and validation tests, and to upload to the {{< var vm.platform >}} to populate the model documentation and validation reports.
 
@@ -42,7 +42,7 @@ For existing models, this information can be found in the {{< var validmind.plat
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^3]
+2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^4]
 
 3. In the left sidebar that appears for your model, click **{{< fa rocket >}} Getting Started**.
 
@@ -72,14 +72,14 @@ vm.init(
 ```
 
 :::{.callout}
-To also enable monitoring, add `monitoring=True` to the `vm.init` method in your code snippet. [^4]
+To also enable monitoring, add `monitoring=True` to the `vm.init` method in your code snippet. [^5]
 :::
 
 After you have pasted the code snippet into your development source code and run your code, the {{< var validmind.developer >}} will connect and register with the {{< var validmind.platform >}}. You can now use the {{< var vm.developer >}} to document and test your models, and to upload model documentation and test results to the {{< var vm.platform >}}.
 
 ## Upgrade {{< var vm.product >}}
 
-After installing {{< var vm.product >}},[^5] you'll want to periodically make sure you are on the latest version to access any new features and other enhancements: 
+After installing {{< var vm.product >}},[^6] you'll want to periodically make sure you are on the latest version to access any new features and other enhancements: 
 
 1. In your Jupyter Notebook or developer environment, retrieve the information for the currently installed version of {{< var vm.product >}}:
 
@@ -96,7 +96,7 @@ Version: 2.5.15
 ```
 :::
 
-2. If the version returned is lower than the version indicated in our production open-source code,[^6] run the following command:
+2. If the version returned is lower than the version indicated in our production open-source code,[^7] run the following command:
 
     ```python
     %pip install --upgrade validmind
@@ -111,14 +111,16 @@ Version: 2.5.15
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^1]: [Manage stakeholder types on models](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
 
-[^2]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
+[^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^3]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^4]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^5]: [Install {{< var vm.product >}}](#install-validmind)
+[^5]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 
-[^6]: **ValidMind GitHub:** [validmind-library/validmind/&lowbar;&lowbar;version&lowbar;&lowbar;.py](https://github.com/validmind/validmind-library/blob/prod/validmind/__version__.py)
+[^6]: [Install {{< var vm.product >}}](#install-validmind)
+
+[^7]: **ValidMind GitHub:** [validmind-library/validmind/&lowbar;&lowbar;version&lowbar;&lowbar;.py](https://github.com/validmind/validmind-library/blob/prod/validmind/__version__.py)
