--- a/site/guide/model-inventory/configure-model-interdependencies.qmd
+++ b/site/guide/model-inventory/configure-model-interdependencies.qmd
@@ -12,7 +12,7 @@ affected by or affects other models in your inventory.
 
 - [x] {{< var link.login >}}
 - [x] There are two or more models registered in the model inventory.[^1]
-- [x] You are the model owner for the model you want to set interdependencies for, a [{{< fa code >}} Developer]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
+- [x] You are the model owner[^2] for the model you want to set interdependencies for, a [{{< fa code >}} Developer]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 
 :::
 
@@ -20,7 +20,7 @@ affected by or affects other models in your inventory.
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**. 
 
-2. Select a model or find your model by applying a filter or searching for it.[^3]
+2. Select a model or find your model by applying a filter or searching for it.[^4]
 
 3. Any existing model interdependencies are shown under the Model Interdependencies section.
 
@@ -35,7 +35,7 @@ affected by or affects other models in your inventory.
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**. 
 
-2. Select a model or find your model by applying a filter or searching for it.[^4]
+2. Select a model or find your model by applying a filter or searching for it.[^5]
 
 3. Click **Manage Dependencies** to open up the model interdependencies detail menu.
 
@@ -76,8 +76,10 @@ Once applied, model interdependencies will populate on all models linked togethe
 
 [^1]: [Register models in the inventory](register-models-in-inventory.qmd)
 
-[^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^2]: [Manage stakeholder types on models](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
 
-[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
 [^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
