--- a/site/guide/model-inventory/edit-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/edit-model-inventory-fields.qmd
@@ -13,7 +13,7 @@ Edit individual detail fields on a model to ensure that model details are accura
 
 - [x] {{< var link.login >}}
 - [x] The model is already registered in the model inventory.[^1]
-- [x] You are the model owner for the model you would like edit the details of, a [{{< fa hand >}} Customer Admin]{.bubble}, or assigned another role or stakeholder type with sufficient permissions to perform the tasks in this guide.[^2]
+- [x] You are the model owner[^2] for the model you would like edit the details of, a [{{< fa hand >}} Customer Admin]{.bubble}, or assigned another role or stakeholder type with sufficient permissions to perform the tasks in this guide.[^3]
 
 :::
 
@@ -21,7 +21,7 @@ Edit individual detail fields on a model to ensure that model details are accura
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**. 
 
-2. Select a model or find your model by applying a filter or searching for it.[^3]
+2. Select a model or find your model by applying a filter or searching for it.[^4]
 
 3. Hover over a field until the **{{< fa pencil >}}** appears, then click to make your changes:
 
@@ -30,7 +30,7 @@ Edit individual detail fields on a model to ensure that model details are accura
 
 ### Manage model stakeholders
 
-1. On the model's detail page, click on the model stakeholder type[^4] you'd like to add users to.
+1. On the model's detail page, click on the model stakeholder type[^5] you'd like to add users to.
 
 2. Select your desired users from the drop-down menu.
 
@@ -41,7 +41,7 @@ Edit individual detail fields on a model to ensure that model details are accura
 ### Manage supporting documentation
 
 ::: {.callout title="Uploaded files must be less than 50 MB each in size."}
-To work with attachments on models, first add an attachment inventory field.[^5]
+To work with attachments on models, first add an attachment inventory field.[^6]
 :::
 
 ::: {.panel-tabset}
@@ -70,10 +70,12 @@ To work with attachments on models, first add an attachment inventory field.[^5]
 
 [^1]: [Register models in the inventory](register-models-in-inventory.qmd)
 
-[^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^2]: [Manage stakeholder types on models](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
 
-[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^5]: [Manage model inventory fields](manage-model-inventory-fields.qmd#inventory-field-types)
+[^5]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+
+[^6]: [Manage model inventory fields](manage-model-inventory-fields.qmd#inventory-field-types)
