--- a/site/guide/model-inventory/register-models-in-inventory.qmd
+++ b/site/guide/model-inventory/register-models-in-inventory.qmd
@@ -12,8 +12,8 @@ Register models with {{< var vm.product >}} as the first step towards streamlini
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] You are the model owner.
-- [x] You are a [{{< fa code >}} Developer]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1]
+- [x] You are the model owner.[^1]
+- [x] You are a [{{< fa code >}} Developer]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
 
 :::
 
@@ -23,7 +23,7 @@ Register models with {{< var vm.product >}} as the first step towards streamlini
 
 2. Click **{{< fa plus >}} Register Model**.
 
-3. Depending on whether or not your organization has additional fields[^2] required on model registration, input the information on the Register New Model panel.
+3. Depending on whether or not your organization has additional fields[^3] required on model registration, input the information on the Register New Model panel.
 
 ::: {.panel-tabset}
 
@@ -38,13 +38,13 @@ If no additional fields are required on registration for your models:
 | Field | Description | 
 |---:|---|
 | [model name]{.smallcaps} | The name of your model. |
-| [group]{.smallcaps}  | (conditional) If you belong to multiple user groups,[^3] select the group that can see the model. |
+| [group]{.smallcaps}  | (conditional) If you belong to multiple user groups,[^4] select the group that can see the model. |
 | [what type of model is it?]{.smallcaps}  | Whether the model is a new model, or an existing model. |
-| [template]{.smallcaps}  (conditional) | New models require a **Template**[^4] to be selected. |
+| [template]{.smallcaps}  (conditional) | New models require a **Template**[^5] to be selected. |
 | [model status]{.smallcaps}  (conditional) | Existing models require a **Model Status** to be selected. |
 | [business unit]{.smallcaps}  | Business unit associated with the model. |
 | [use case]{.smallcaps}  | The model's use case. |
-| [is it a vendor model?]{.smallcaps}  (optional) | If the model is a vendor model, toggle **Is Vendor Model**.[^5] |
+| [is it a vendor model?]{.smallcaps}  (optional) | If the model is a vendor model, toggle **Is Vendor Model**.[^6] |
 | [vendor name]{.smallcaps}  (conditional) | If the model is a vendor model, provide the vendor's name. |
 | [purpose]{.smallcaps}  | Explain what the model will be used for. |
 | [preliminary risk tier]{.smallcaps}  | Assign a preliminary risk tier. |
@@ -72,12 +72,14 @@ If additional fields are required on model registration for your organization:
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^1]: [Manage stakeholder types on models](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
 
-[^2]: [Manage model inventory fields](manage-model-inventory-fields.qmd)
+[^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^3]: [Manage groups](/guide/configuration/manage-groups.qmd)
+[^3]: [Manage model inventory fields](manage-model-inventory-fields.qmd)
 
-[^4]: [Working with templates](/guide/templates/working-with-templates.qmd)
+[^4]: [Manage groups](/guide/configuration/manage-groups.qmd)
 
-[^5]: [Vendor model](/about/glossary/glossary.qmd#vendor-model)
+[^5]: [Working with templates](/guide/templates/working-with-templates.qmd)
+
+[^6]: [Vendor model](/about/glossary/glossary.qmd#vendor-model)
