--- a/site/developer/model-documentation/install-and-initialize-validmind-library.qmd
+++ b/site/developer/model-documentation/install-and-initialize-validmind-library.qmd
@@ -111,7 +111,7 @@ Version: 2.5.15
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage stakeholder types on models](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
+[^1]: [Manage model stakeholders](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-model-stakeholders)
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
