--- a/site/guide/attestation/complete-attestation-questionnaires.qmd
+++ b/site/guide/attestation/complete-attestation-questionnaires.qmd
@@ -31,7 +31,7 @@ When prompted on your dashboard:
 
    ![Dashboard prompt for attestations](attestation-banner.png){width="90%" fig-alt="Attestation prompt with a link to the attestation labelled 'Open Attestations'" .screenshot}
 
-   Alternatively, you can access attestations pending your action by clicking **Attestations** in these pages:
+   Alternatively, you can access attestations pending your action by clicking **{{< fa clipboard-check >}} Attestations** in these pages:
 
    - **{{< fa cubes >}} Inventory**
    - **{{< fa triangle-exclamation >}} Findings**
@@ -45,7 +45,7 @@ When prompted on your dashboard:
 
    After you confirm the status change to [**{{< fa clipboard-check >}} In Progress**]{.bubble}, the attestation questionnaire is ready to be completed in the right sidebar.
 
-4. Complete the attestation questionnaire, including:
+4. Click on the attestation to complete the attestation questionnaire, including:
 
    - Checking all applicable boxes
    - Answering each question 
