--- a/site/guide/attestation/set-up-attestations.qmd
+++ b/site/guide/attestation/set-up-attestations.qmd
@@ -71,11 +71,11 @@ After executing the schedule, the dashboard of the model owner displays a banner
 
 4. When **{{< fa ellipsis-vertical >}}** appears, select **{{< fa pencil >}} Edit**.
 
-5. Make changes to one of the following:
+5. Make your desired changes to the following:
 
-   - Name
-   - Start date
-   - End date
+   - **[name]{.smallcaps}**
+   - **[start date]{.smallcaps}**
+   - **[end date]{.smallcaps}**
 
 6. Click **Save Period**.
 
