--- a/site/guide/model-inventory/edit-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/edit-model-inventory-fields.qmd
@@ -70,7 +70,7 @@ To work with attachments on models, first add an attachment inventory field.[^6]
 
 [^1]: [Register models in the inventory](register-models-in-inventory.qmd)
 
-[^2]: [Manage stakeholder types on models](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
+[^2]: [Manage model stakeholders](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-model-stakeholders)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
