--- a/site/guide/model-inventory/register-models-in-inventory.qmd
+++ b/site/guide/model-inventory/register-models-in-inventory.qmd
@@ -72,7 +72,7 @@ If additional fields are required on model registration for your organization:
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage stakeholder types on models](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
+[^1]: [Manage model stakeholders](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-model-stakeholders)
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
