--- a/site/guide/attestation/review-attestation-questionnaires.qmd
+++ b/site/guide/attestation/review-attestation-questionnaires.qmd
@@ -37,7 +37,7 @@ When prompted on your dashboard:
 
    ![Dashboard prompt for attestations](attestation-banner.png){width="90%" fig-alt="Attestation prompt with a link to the attestation labelled 'Open Attestations'" .screenshot}
 
-   Alternatively, you can access attestations pending your action by clicking **Attestations** in these pages:
+   Alternatively, you can access attestations pending your action by clicking **{{< fa clipboard-check >}} Attestations** in these pages:
 
    - **{{< fa cubes >}} Inventory**
    - **{{< fa triangle-exclamation >}} Findings**
@@ -46,7 +46,7 @@ When prompted on your dashboard:
 
    The attestation questionnaire is now ready to be reviewed in the right sidebar.
 
-3. Optional: Click **{{< fa signal-stream >}} See Activity** to review:
+3. Optional: Click **{{< fa wifi >}} See Activity** to review:
 
    - Who completed the different status changes for the attestation.
    - When the attestation status changed.
