--- a/site/guide/model-inventory/configure-model-interdependencies.qmd
+++ b/site/guide/model-inventory/configure-model-interdependencies.qmd
@@ -76,7 +76,7 @@ Once applied, model interdependencies will populate on all models linked togethe
 
 [^1]: [Register models in the inventory](register-models-in-inventory.qmd)
 
-[^2]: [Manage stakeholder types on models](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
+[^2]: [Manage model stakeholders](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-model-stakeholders)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
