Editing customize your dashboard

--- a/site/guide/configuration/customize-your-dashboard.qmd
+++ b/site/guide/configuration/customize-your-dashboard.qmd
@@ -19,7 +19,7 @@ Changes are automatically saved to your account and do not affect other users.
 
 ## Manage dashboards
 
-Dashboards allow you to use widgets to quickly review and access information by displaying widgets.[^1]
+Dashboards allow you to use widgets to quickly review and access information by displaying widgets.
 
 ### Add dashboards
 
@@ -34,6 +34,8 @@ Dashboards allow you to use widgets to quickly review and access information by 
 
 4. Click **Add New Dashboard** to create your dashboard.
 
+5. Once created, add widgets to your dashboard.[^1]
+
 ### Edit or remove dashboards
 
 ::: {.callout-important}
@@ -45,10 +47,22 @@ Deletion of dashboards is permanent.
 
 2. Click on the tab for the dashboard you would like to edit or remove.
 
-3. Click on **{{< fa ellipsis-vertical >}}** to edit the name and description of your dashboard or to delete a dashboard: 
+3. Click **{{< fa pencil >}} Edit Dashboard**:
 
-    - To edit a dashboard, select **Edit Dashboard Details**. Make your edits then click **Save Changes** to apply your adjustments.
-    - To remove a dashboard, select [**{{< fa trash-can >}} Delete Dashboard**]{.red}. Once you confirm, your dashboard will be deleted.
+::: {.panel-tabset}
+
+#### Edit dashboard details
+
+a. Select **{{< fa pencil >}} Edit Dashboard** to edit a **[dashboard name]{.smallcaps}**  or **[description]{.smallcaps}**.
+b. Make your edits then click **Save Changes** to apply your adjustments.
+
+
+#### Remove a dashboard
+
+a. To remove a dashboard, select **{{< fa trash-can >}} Delete**.
+b. Once you confirm, your dashboard will be deleted.
+
+:::
 
 ## Manage widgets
 
@@ -56,21 +70,31 @@ Widgets display information at a glance on your dashboards.[^2]
 
 #### Widget types
 
-Model Inventory View
-: Retrieves a saved model inventory view.[^3] 
+::: {.panel-tabset}
 
-Model Findings View
-: Retrieves a saved findings view.[^4]
+##### {{< fa cubes >}} Model Inventory View
+Retrieves a saved model inventory view.[^3]
 
-Analytics Visualization
-: Retrieves an analytics visualization.[^5]
+##### {{< fa warning >}} Model Findings View
+Retrieves a saved findings view.[^4]
 
-Other
-: Retrieve a list of the latest model findings[^6] or recent activity.[^7]
+##### {{< fa square-poll-vertical >}} Visualization
+Retrieves an analytics visualization.[^5]
+
+##### {{< fa table-cells-large >}} Other
+Retrieve a list of the latest model findings[^6] or recent activity.[^7]
+
+:::
 
 ### Arrange widgets
 
-1. On the {{< fa home >}} Dashboard, hover over the title of a widget until the **{{< fa hand>}}** appears. 
+1. In the left sidebar, click **{{< fa home >}} Dashboard**.
+
+2. Click on the tab for the dashboard you would like to arrange widgets for.
+
+3. Click **{{< fa pencil >}} Edit Dashboard**.
+
+4.  Hover over the title of a widget until the **{{< fa hand>}}** appears.
 
 2. Click and drag to position your widget as desired.
 
@@ -82,23 +106,25 @@ Other
 
 2. Click on the tab for the dashboard you would like to add a widget to.
 
-3. Click **{{< fa plus >}} Add Widget**.
+3. Click **{{< fa pencil >}} Edit Dashboard**.
 
-4. Select the type of widget you'd like to add:[^8]
+4. Select **{{< fa plus >}} Add Widget**.
 
-    - **Model Inventory View**
-    - **Model Findings View**
-    - **Analytics Visualization**
-    - **Other**
+5. Select the type of widget you'd like to add:[^8]
 
-5. On the modal that appears, configure the information retrieved by the widget: 
+    - **{{< fa cubes >}} Model Inventory View**
+    - **{{< fa warning >}} Model Findings View**
+    - **{{< fa square-poll-vertical >}} Visualization**
+    - **{{< fa table-cells-large >}} Other**
+
+6. On the modal that appears, configure the information retrieved by the widget: 
 
     - **Model Inventory View** — Select a **[view name]{.smallcaps}** then cick **Add Model Inventory View**.
     - **Model Findings View** — Select a **[view name]{.smallcaps}** then cick **Add Model Findings View**.
     - **Analytics Visualization** — Select an **[analytics page]{.smallcaps}** and a **[visualization]{.smallcaps}** then click **Add Visualization**.
     - **Other** — Select one of the **[widgets]{.smallcaps}** then click **Add Widget**.
 
-6. Confirm that your widget appears as expected. 
+7. Confirm that your widget appears as expected. 
 
     You can also rearrange the position of the widget to your liking.[^9]
 
@@ -113,11 +139,11 @@ Removing a widget from a dashboard will not delete the linked view or analytics 
 
 2. Click on the tab for the dashboard you would like to remove widgets from.
 
-3. Hover over the widget you would like to remove until the **{{< fa ellipsis-vertical >}}** appears and then click on it.
+3. Hover over the widget you would like to remove.
 
-4. Select [**{{< fa trash-can >}} Remove**]{.red}.
+4. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select [**{{< fa trash-can >}} Remove**]{.red}.
 
-5.  Once you confirm, your widget will be removed from your dashboard.
+5. Once you confirm, your widget will be removed from your dashboard.
 
 
 <!-- FOOTNOTES -->
