--- a/site/guide/configuration/set-up-your-organization.qmd
+++ b/site/guide/configuration/set-up-your-organization.qmd
@@ -32,7 +32,9 @@ This task involves managing organizations within {{< var vm.product >}}, allowin
 
 #### Edit business units
 
-Hover over the business unit until the **{{< fa ellipsis-vertical >}}** appears and click on it to rename or delete the unit:
+1. Hover over the business unit you want to edit.
+
+2. When the **{{< fa ellipsis-vertical >}}** appears, click on it to rename or delete the unit:
 
   - Click **{{< fa pencil >}} Edit Details** to rename the business unit. Click **Save** to apply your changes.
   - Click [**{{< fa trash-can >}} Delete Business Unit**]{.red} to remove the business unit.
@@ -63,9 +65,11 @@ In order to delete a business unit, there must be no models attached to that uni
 In order to delete a use case, there must be no models associated with it.
 :::
 
-1. Hover over the use case until the **{{< fa ellipsis-vertical >}}** appears and click on it.
+1. Hover over the use case you want to edit.
 
-2. If you are sure you want to remove the use case, click **{{< fa trash-can >}} Delete Use Case** to delete it.
+2. When the **{{< fa ellipsis-vertical >}}** appears, click on it.
+
+3. If you are sure you want to remove the use case, click **{{< fa trash-can >}} Delete Use Case** to delete it.
 
 :::
 
