--- a/site/guide/model-documentation/collaborate-with-others.qmd
+++ b/site/guide/model-documentation/collaborate-with-others.qmd
@@ -97,7 +97,7 @@ While working with content blocks in documentation,[^5] you can save named versi
 
 1. Click the highlighted text portion to access the comment thread.
 
-2. To edit a comment in the thread, click the **{{< fa ellipsis-vertical >}}** icon for the corresponding comment and click **{{< fa pencil >}} Edit**.
+2. Click the **{{< fa ellipsis-vertical >}}** icon for the corresponding comment and select **{{< fa pencil >}} Edit**.
 
 3. Edit your comment and click **Save**.
 
@@ -107,7 +107,7 @@ To edit a comment in a resolved thread, follow the same steps but click the **{{
 
 1. Click the highlighted text portion to access the comment thread.
 
-2. To edit a comment in the thread, click the **{{< fa ellipsis-vertical >}}** icon for the corresponding comment and click **{{< fa trash-can >}} Remove**.
+2. Click the **{{< fa ellipsis-vertical >}}** icon for the corresponding comment and select **{{< fa trash-can >}} Remove**.
     
     After you confirm, the comment will be deleted.
 
