--- a/site/guide/model-inventory/_remove-layout-view.qmd
+++ b/site/guide/model-inventory/_remove-layout-view.qmd
@@ -1,6 +1,8 @@
 1. Click **{{< fa bookmark >}} Select View**.
 
-1. For the view you want to modify, click on **{{< fa ellipsis-vertical >}}** to edit the name or description or to delete the view:
+1. Hover over the view you want to modify.
+
+1. When the **{{< fa ellipsis-vertical >}}** appears, click on it to edit the name or description or to delete the view:
 
     - To edit a view, select **{{< fa pencil >}} Edit View**. Make your edits then click **Save Changes** to apply your adjustments.
     - To remove a view, select [**{{< fa trash-can >}} Remove View**]{.red}. Once you confirm, your view will be deleted.
