--- a/site/guide/model-validation/_add-risk-areas.qmd
+++ b/site/guide/model-validation/_add-risk-areas.qmd
@@ -1,20 +1,17 @@
+:::: {.content-visible unless-format="revealjs"}
+a. Click **{{< fa plus >}} Add Risk Area**.
+
+a. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
+
+a. Click **Add Risk Area** to create your risk area.
+
+    After you save, confirm that your risk area was added to the list in alphabetical order.
+
+::::
+
 :::: {.content-hidden unless-format="revealjs"}
 {{< include /guide/model-validation/_risk-areas.qmd >}}
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-1. Under Workspace, select **Risk Areas & Validation Guidelines**.
-
-1. Click **{{< fa plus >}} Add Risk Area**.
-
-1. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
-
-1. Click **Add Risk Area** to create your risk area.
-
-    After you save, confirm that your risk area was added to the list in alphabetical order.
-::::
-
-:::: {.content-visible unless-format="revealjs"}
 a. Click **{{< fa plus >}} Add Risk Area**.
 
 a. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
