--- a/site/guide/model-validation/manage-validation-guidelines.qmd
+++ b/site/guide/model-validation/manage-validation-guidelines.qmd
@@ -37,6 +37,10 @@ To set up validation guidelines, you'll need to complete these two steps in sequ
 
 {{< include /guide/model-validation/_risk-areas.qmd >}}
 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workspace, select **Risk Areas & Validation Guidelines**.
+
 ::: {.panel-tabset}
 
 #### Add risk areas
@@ -45,13 +49,13 @@ To set up validation guidelines, you'll need to complete these two steps in sequ
 
 #### Edit risk areas
 
-1. Hover over the risk area you want to edit until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+a. Hover over the risk area you want to edit.
 
-1. Select **{{< fa pencil>}} Edit Risk Area**.
+b. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select **{{< fa pencil>}} Edit Risk Area**.
 
-1. Make your desired changes to the risk area's **[name]{.smallcaps}** and **[description]{.smallcaps}**.
+c. Make your desired changes to the risk area's **[name]{.smallcaps}** and **[description]{.smallcaps}**.
 
-1. Click **Save Risk Area** to apply your changes.
+d. Click **Save Risk Area** to apply your changes.
 
 #### Delete risk areas
 
@@ -59,17 +63,21 @@ To set up validation guidelines, you'll need to complete these two steps in sequ
 Any guidelines associated with a risk area will need to be deleted before the risk area can be removed.
 :::
 
-1. Hover over the risk area you want to remove until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+a. Hover over the risk area you want to remove.
 
-1. Select [**{{< fa trash-can>}} Delete Risk Area**]{.red}.
+b. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select [**{{< fa trash-can>}} Delete Risk Area**]{.red}.
 
-    Once you confirm, that risk area will be removed.
+c. Once you confirm, that risk area will be removed.
 
 :::
 
 ### Manage guidelines
 
 {{< include /guide/model-validation/_validation-guidelines.qmd >}}
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workspace, select **Risk Areas & Validation Guidelines**.
 
 ::: {.panel-tabset}
 
@@ -79,15 +87,15 @@ Any guidelines associated with a risk area will need to be deleted before the ri
 
 #### Edit guidelines
 
-1. Expand the menu for a risk area by clicking **{{< fa chevron-down >}}**.
+a. Expand the menu for a risk area by clicking **{{< fa chevron-down >}}**.
 
-2. Hover over the guideline you want to edit until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+b. Hover over the guideline you want to edit.
 
-3. Select **{{< fa pencil>}} Edit Guideline**.
+c. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select **{{< fa pencil>}} Edit Guideline**.
 
-4. Make your desired changes to the risk area's **[title]{.smallcaps}** and **[description]{.smallcaps}**.
+d. Make your desired changes to the risk area's **[title]{.smallcaps}** and **[description]{.smallcaps}**.
 
-5. Click **Save Guideline** to apply your changes.
+e. Click **Save Guideline** to apply your changes.
 
 #### Delete guidelines
 
@@ -95,13 +103,13 @@ Any guidelines associated with a risk area will need to be deleted before the ri
 You are also unable to delete any guidelines with assessments in validation reports assigned to them.
 :::
 
-1. Expand the menu for a risk area by clicking **{{< fa chevron-down >}}**.
+a. Expand the menu for a risk area by clicking **{{< fa chevron-down >}}**.
 
-2. Hover over the guideline you want to delete until the  **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+b. Hover over the guideline you want to delete.
 
-3. Select [**{{< fa trash-can>}} Delete Guideline**]{.red}.
+c. When the  **{{< fa ellipsis-vertical >}}** menu appears, click on it and select [**{{< fa trash-can>}} Delete Guideline**]{.red}.
 
-    Once you confirm, that guideline will be removed.
+d. Once you confirm, that guideline will be removed.
 
 :::
 
