--- a/site/guide/model-workflows/configure-model-workflows.qmd
+++ b/site/guide/model-workflows/configure-model-workflows.qmd
@@ -76,9 +76,9 @@ b. When you are finished, click **Save Workflow** to apply your changes.
 Deleting workflow steps on workflows active on models may result in malfunctioning workflows.
 :::
 
-1. Hover over the step until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+1. Hover over the step you want to delete.
 
-2. Select **{{< fa gear >}} Delete**.
+2. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select **{{< fa gear >}} Delete**.
 
     On the confirmation dialogue that appears, select **OK** to confirm deletion.
 
@@ -105,9 +105,9 @@ Deleting workflow steps on workflows active on models may result in malfunctioni
 
 2. Under Workspace, select **Workflows**.
 
-3. Hover over the workflow you would like to remove until the **{{< fa ellipsis-vertical >}}** appears, then click on it.
+3. Hover over the workflow you would like to remove.
 
-4. Select **{{< fa ban >}} Delete Workflow**.
+3. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select **{{< fa ban >}} Delete Workflow**.
 
 5. After you confirm, the workflow will be removed and inaccessible by models for any future runs.
 
