--- a/site/guide/model-workflows/manage-model-stages.qmd
+++ b/site/guide/model-workflows/manage-model-stages.qmd
@@ -28,7 +28,9 @@ aliases:
 
 2. Under Models, select **Model Stages**.
 
-3. Hover over the stage you'd like to modify until the **{{< fa ellipsis-vertical >}}** appears, then click on it:
+3. Hover over the stage you'd like to modify.
+
+4. When the **{{< fa ellipsis-vertical >}}** appears, click on it:
 
     - Select **{{< fa pencil >}} Edit Details** to modify that stage.
     - Select **{{< fa trash-can >}} Delete Stage**. On the confirmation dialogue that appears, select **OK** to confirm deletion.
