--- a/site/guide/reporting/_create-a-visualization.qmd
+++ b/site/guide/reporting/_create-a-visualization.qmd
@@ -1,7 +1,9 @@
 :::: {.content-visible unless-format="revealjs"}
 a. On **{{< fa square-poll-vertical >}} Analytics**, click on the tab for your custom page you'd like to add a visualization to. 
 
-a. Click **{{< fa pencil >}} Edit Dashboard** and select **{{< fa pencil >}} Add Widget** then **{{< fa pencil >}} Add Visualization**.
+a. Click **{{< fa pencil >}} Edit Dashboard**.
+
+a. Select **{{< fa plus >}} Add Widget** then **{{< fa plus >}} Add Visualization**.
 
 a. On the Add Visualization panel, enter in your **[title]{.smallcaps}**.
 
@@ -49,7 +51,9 @@ For example, to create an open findings visualization in stacked bar chart forma
 :::: {.content-hidden unless-format="revealjs"}
 a. On **{{< fa square-poll-vertical >}} Analytics**, click on the tab for your custom page you'd like to add a visualization to. 
 
-a. Click **{{< fa pencil >}} Edit Dashboard** and select **{{< fa pencil >}} Add Widget** then **{{< fa pencil >}} Add Visualization**.
+a. Click **{{< fa pencil >}} Edit Dashboard**.
+
+a. Select **{{< fa plus >}} Add Widget** then **{{< fa plus >}} Add Visualization**.
 
 a. On the Add Visualization panel, enter in your **[title]{.smallcaps}**.
 
