--- a/site/guide/reporting/manage-custom-reports.qmd
+++ b/site/guide/reporting/manage-custom-reports.qmd
@@ -83,11 +83,13 @@ Add, edit, or remove custom data to your analytics within the {{< var validmind.
 
 1. On **{{< fa square-poll-vertical >}} Analytics**, click on the tab for your custom page you'd like to edit the visualization for.
 
-2. Hover over the visualization you'd like to modify until the **{{< fa ellipsis-vertical >}}** icon appears, then click on it.
+2. Click **{{< fa pencil >}} Edit Dashboard**.
 
-3. Select **{{< fa pencil >}} Edit Visualization**.
+3. Hover over the visualization you'd like to modify.
 
-4. When you are finished with your adjustments, click **Save Visualization** to apply your changes.
+4. When the **{{< fa ellipsis-vertical >}}** icon appears, click on it and select **{{< fa pencil >}} Edit Visualization**.
+
+5. When you are finished with your adjustments, click **Save Visualization** to apply your changes.
 
 ## Remove custom analytics
 
@@ -105,20 +107,26 @@ You can either delete a entire custom analytics page, or remove a single custom 
 
 2. Click on the tab for your custom page you'd like to delete.
 
-3. Click **{{< fa ellipsis-vertical >}}** in the top-right hand corner of the custom page.
+3. Click **{{< fa pencil >}} Edit Dashboard**.
 
-4. Select [**{{< fa trash-can >}} Delete Page**]{.red}.
+4. Select **{{< fa trash-can >}} Delete**.
 
-5. After you confirm the deletion, the page will be permanently removed. 
+5. After you confirm the deletion, the page will be permanently removed.
 
 
 #### Delete a visualization
 
-1. On **{{< fa square-poll-vertical >}} Analytics**, click on the tab for your custom page you'd like to delete a visualization for.
+1. In the left sidebar, click **{{< fa square-poll-vertical >}} Analytics**.
 
-2. Hover over the visualization you'd like to remove until the **{{< fa ellipsis-vertical >}}** icon appears, then click on it.
+2. Click on the tab for your custom page you'd like to delete a visualization for.
 
-3. Select [**{{< fa trash-can >}} Remove Visualization**]{.red}.
+3. Click **{{< fa pencil >}} Edit Dashboard**.
+
+4. Hover over the visualization you'd like to remove.
+
+5. When the **{{< fa ellipsis-vertical >}}** icon appears, click on it and select **{{< fa trash-can >}} Remove**.
+
+6. After you confirm the deletion, the visualization will be permanently removed from that dashboard.
 
 :::
 
