--- a/site/guide/model-validation/_add-validation-guidelines.qmd
+++ b/site/guide/model-validation/_add-validation-guidelines.qmd
@@ -1,25 +1,25 @@
-:::: {.content-hidden unless-format="revealjs"}
-{{< include /guide/model-validation/_validation-guidelines.qmd >}}
+:::: {.content-visible unless-format="revealjs"}
+a. Hover over the risk area you want to add a guideline to.
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
+a. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select **{{< fa plus >}} Add Guideline**.
 
-2. Under Workspace, select **Risk Areas & Validation Guidelines**.
+a. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
 
-1. Hover over the risk area you want to add a guideline to until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
-
-1. Select **{{< fa plus >}} Add Guideline**.
-
-1. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
-
-1. Click **Add Guideline** to insert your guideline to that risk area.
+a. Click **Add Guideline** to insert your guideline to that risk area.
 
     After you save, confirm that your guideline was added to your risk area in alphabetical order.
 ::::
 
-:::: {.content-visible unless-format="revealjs"}
-a. Hover over the risk area you want to add a guideline to until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+:::: {.content-hidden unless-format="revealjs"}
+{{< include /guide/model-validation/_validation-guidelines.qmd >}}
 
-a. Select **{{< fa plus >}} Add Guideline**.
+a. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+a. Under Workspace, select **Risk Areas & Validation Guidelines**.
+
+a. Hover over the risk area you want to add a guideline to.
+
+a. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select **{{< fa plus >}} Add Guideline**.
 
 a. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
 
