--- a/site/guide/model-workflows/_link-workflow-together.qmd
+++ b/site/guide/model-workflows/_link-workflow-together.qmd
@@ -2,17 +2,17 @@
 
 ::: {.panel-tabset}
 
-#### a. Start the workflow
+#### 1. Start the workflow
 
 To initiate the beginning of your workflow:^[After you’ve [configured your workflow steps](/guide/model-workflows/configure-model-workflows.qmd#configure-workflow-steps), you can then link your workflow together.]
 
-1. Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
+a. Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
 
-1. Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the top **{{< fa circle >}}** on the first step of your workflow.
+a. Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the top **{{< fa circle >}}** on the first step of your workflow.
 
-1. Continue with linking the rest your steps together.
+a. Continue with linking the rest your steps together.
 
-#### b. Link steps together
+#### 2. Link steps together
 
 To link subsequent steps together:
 
@@ -27,27 +27,27 @@ Hover over a workflow step to view an animation of the steps connecting to and f
 
 {{< fa users >}} Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} {{< fa cube >}} Model Stage Change step:^[[Workflow step types](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types)]
 
-1. First, configure an **{{< fa users >}} Approval** step.
+a. First, configure an **{{< fa users >}} Approval** step.
 
-1. Then, drag two **{{< fa cube >}} Model Stage Change** steps onto the canvas:
+a. Then, drag two **{{< fa cube >}} Model Stage Change** steps onto the canvas:
 
     - Assign a stage associated with rejection to one in the **[set model stage to]{.smallcaps}** field.
     - Assign a stage associated with approval to the other in the **[set model stage to]{.smallcaps}** field.
 
-1. Then, from the bottom of your **{{< fa users >}} Approval** step:
+a. Then, from the bottom of your **{{< fa users >}} Approval** step:
 
     a. Connect the left [**{{< fa circle >}}**]{.red} (red) to your rejection step.^[When complete, the workflow arrow will display as [Rejected]{.bubble .red .red-bg}.]
     b. Connect the right [**{{< fa circle >}}**]{.green} (green) to your approval step.^[When complete, the workflow arrow will display as [Approved]{.bubble .green .green-bg}.]
 
-#### c. End the workflow
+#### 3. End the workflow
 
 When all your workflow steps have been linked together:
 
-1. Designate the end of your workflow by dragging an **{{< fa circle-stop >}} End** step onto the canvas.
+a. Designate the end of your workflow by dragging an **{{< fa circle-stop >}} End** step onto the canvas.
 
-1. Link relevant previous steps to the **{{< fa circle-stop >}} End** step by clicking on the bottom **{{< fa circle >}}** of those steps, and dragging to the top **{{< fa circle >}}** of the **{{< fa circle-stop >}} End** step.
+a. Link relevant previous steps to the **{{< fa circle-stop >}} End** step by clicking on the bottom **{{< fa circle >}}** of those steps, and dragging to the top **{{< fa circle >}}** of the **{{< fa circle-stop >}} End** step.
 
-1. When you are finished configuring your workflow, click **Save Workflow** to apply your changes.
+a. When you are finished configuring your workflow, click **Save Workflow** to apply your changes.
 
 :::
 
